--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
         android:windowSoftInputMode="adjustResize"
         android:exported="true">
         <intent-filter>
+          <action android:name="android.intent.action.VIEW" />
+          <category android:name="android.intent.category.DEFAULT" />
+          <category android:name="android.intent.category.BROWSABLE" />
+          <!-- scheme = bumdesapp, host = email, path = /verified -->
+          <data android:scheme="bumdesapp" android:host="email" android:path="/verified" />
+        </intent-filter>
+        <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
